# my-site-backend

./: .env.example  .flake8  .gitignore  .pre-commit.config.yaml  Makefile  README.md  manage.py  pyproject.toml
.github/: README.md
.github/workflows/: test.yaml
docker/: docker-compose.yaml
dotenv/: .env.test
scripts/: ipython_shell_enter_message.py
src/: alembic.ini
src/app/: __init__.py  main.py
src/app/admin/: __init__.py  auth.py
src/app/admin/views/: __init__.py  watch_list.py
src/app/api/v1/: __init__.py  api.py
src/app/api/v1/dependencies/: __init__.py  databases.py  filters.py  users.py
src/app/api/v1/routes/: __init__.py
src/app/api/v1/routes/admin/: __init__.py  api.py
src/app/api/v1/routes/app/: __init__.py  api.py
src/app/core/: __init__.py  config.py  meta.py
src/app/core/exceptions/: __init__.py  content.py  errors.py  handlers.py  repositories.py  results.py
src/app/core/exceptions/content/: __init__.py  base.py
src/app/core/exceptions/http/: __init__.py  base.py  filters.py  permissions.py
src/app/core/models/: __init__.py
src/app/core/models/enums/: __init__.py  base.py  watch_list.py
src/app/core/models/exceptions/: __init__.py  content.py  errors.py
src/app/core/models/mixins/: __init__.py  ids.py  time.py
src/app/core/models/tables/: __init__.py  admins.py  base.py  tests.py  users.py  watch_list.py
src/app/core/models/types/: __init__.py  datetime.py
src/app/core/schemas/: __init__.py
src/app/core/schemas/classes/: __init__.py  base.py  filters.py  tests.py
src/app/core/schemas/regexes/: __init__.py  networks.py
src/app/core/schemas/types/: __init__.py  base.py  networks.py
src/app/core/settings/: admin.py  app.py  auth.py  base.py  db.py  logger.py
src/app/db/: __init__.py
src/app/db/extras/: filters.py
src/app/db/mixins/: permissions.py
src/app/db/queries/: base.py
src/app/db/queries.py/: __init__.py
src/app/db/repositories/: __init__.py  admins.py  base.py
src/app/db/unit_of_works/: base.py
src/app/services/: auth.py
src/app/utils/: __init__.py  admin.py  datetime.py  env.py  humanize.py  operators.py  strings.py
src/cli/: __init__.py  custom_typers.py
src/cli/commands/: admin.py  db.py
src/migrations/: env.py
src/migrations/versions/: 20230530202341_watchlist_init_tables.py  20230804142154_9e9ff391bff4_admin_table.py
src/tests/: conftest.py  test_main.py
src/tests/core/: test_config.py  test_meta.py
src/tests/core/exceptions/http/: test_base_http_exceptions.py
src/tests/core/settings/: test_app_settings.py  test_base_settings.py
src/tests/files/: default_logger_settings.json  override_logger_settings.json
src/tests/test_core/: test_config.py
src/tests/test_core/exceptions/http/: test_base_http_exceptions.py
src/tests/test_core/models/: test_base_table_methods.py
src/tests/test_core/models/enums/: test_base.py
src/tests/test_core/settings/: test_adamin_settings.py  test_app_settings.py  test_base_settings.py  test_database_settings.py  test_logger_settings.py
src/tests/test_db/: conftest.py
src/tests/test_db/repositories/: test_base_repositories.py
src/tests/test_utils/: test_datetime_utils.py  test_env_utils.py  test_operators.py  test_strings_utils.py
src/tests/utils/: database.py  random.py  test_humanize_utils.py
src_backend/: .env.test  .flake8  docker-compose.test.yaml  manage.py  pyproject.toml
src_backend/app/: main.py
src_backend/app/api/v1/: api.py
src_backend/app/api/v1/routes/admin/: api.py
src_backend/app/api/v1/routes/app/: api.py
src_backend/app/core/: config.py
src_backend/app/core/exceptions/: content.py
src_backend/app/core/models/enums/: watch_list.py
src_backend/app/core/models/tables/: __init__.py  base.py  watch_list.py
src_backend/app/core/models/validators/: watch_list.py
src_backend/app/core/schemas/regexes/: networks.py
src_backend/app/core/schemas/types/: networks.py
src_backend/app/core/settings/: app.py  base.py  db.py  logger.py
src_backend/app/management/: app.py  collector.py  context.py  exceptions.py
src_backend/app/management/commands/: base.py  coverage.py  echo.py  runserver.py  style.py  test.py
src_backend/migrations/models/: 1_20230109232330_update.py
src_backend/tests/: test_app.py
src_frontend/: README.md
static/: default_logger_settings.json
