[tool.ruff]
select = [
    "A", "B", "D", "E", "F", "G", "N", "Q", "S", "C90", "UP", "ANN", "ASYNC", "FBT", "COM", "COM",
    "DTZ", "DJ", "EM", "ICN", "PIE", "T20", "PYI", "PT", "SIM", "TCH", "INT", "PTH", "ERA", "TRY"
]
line-length = 100
show-source = true
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    ".eggs",
    "*.egg",
    "dist",
    "tests/fixtures/**",
    "tests/**/snapshots/**",
    "alembic",
    "airich",
]
ignore = [
    "D100",
    "B008",
    "D104",
    "Q000",
    "S101",
    "PT016",
]

    [tool.ruff.pydocstyle]
    convention = "numpy"
    ignore-decorators = ["typing.overload"]

    [tools.ruff.isort]
    include_trailing_comma = true
    use_parentheses = true
    multi_line_output = 3
    line_length = 100

    [tool.ruff.mccabe]
    max-complexity = 11

        [tool.ruff.flake8-bugbear]
    extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

            [tool.ruff.extend-per-file-ignores]
    "__init__.py" = ["F401"]
    "*/migrations/versions/*" = ["D103"]


    [tool.black]
line-length = 100
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


    [tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3


    [tool.coverage]
    [tool.coverage.run]
    source = ["app"]
    branch = true
    omit = ['']

    [tool.coverage.report]
    exclude_lines = [
        "# noqa",
        "raise NotImplementedError"
    ]

    [tool.pytest]
testpath = "tests"


    [tool.bandit]
exclude = ['tests']

    [tool.bandit.assert_used]
    skips = ['*_test.py', '*/test_*.py']


    [tool.poetry]
name = "my-site"
version = "0.1.0"
description = ""
authors = ["Lunev Dmitriy <dima.lunev14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.88.0"}
loguru = "^0.6.0"
pre-commit = "^2.21.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.13"}
alembic = "^1.10.4"
asyncpg = "^0.27.0"
python-dateutil = "^2.8.2"
ruff = "^0.0.272"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = {extras = ["toml"], version = "^7.0.3"}
black = "^22.12.0"
bandit = "^1.7.5"
pytest-cov = "^4.1.0"
freezegun = "^1.2.2"
mimesis = "^10.1.0"
vulture = "^2.7"
isort = "^5.12.0"


[tool.poetry.group.local-tools.dependencies]
pyment = "^0.3.3"
ipython = "^8.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
